# atari-my65816

./: README.md
GAL/: CB180636  CB492220  CB558252  CB968470  CLOCK.abs  CLOCK.doc  CLOCK.sim  CM264568  IO.abs  IO.doc  IO.sim  clock.jed  clock.pld  io.jed  io.pld
KiCad/: fabrication-toolkit-options.json  pcb-65816.kicad_pcb  pcb-65816.kicad_prl  pcb-65816.kicad_pro  pcb-65816.kicad_sch  pcb-65816.kicad_sch-bak  sym-lib-table
KiCad/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
emulation/: .cproject  .project  log.txt  my65816.cmd
emulation/src/: CMakeLists.txt  decoder.c  decoder.h  display.c  display.h  io.c  io.h  kimo.h  main.c  mouse.c  ram.c  rom.c
emulation/src/lib65816/: config.h  cpu.c  cpu.h  cpuevent.c  debugger.c  dispatch.c
release/: font.hex  kernel_01.hex  kernelstart_00.hex  myos_00.hex  myos_01.hex  start_01.hex
release/lst/: kernel.lst  myos.lst  start.lst
res/: palette.mif
src/: debug16.a65  kernel.a65  kernelWDC.asm  myos.a65  rs232.a65  start.a65  startWDC.asm  testc.c  vtl02c.a65
